# 3d-reconstruction

./: .gitignore  Dockerfile  README.md  api.md  calc_rt.py  calibration_fisheye.py  docker-compose.yml  fusioneye.py  fusioneye_test.py  index.py  normal_single.py  pcdColor.py  pcd_color.py  pcl_tools.py  requirements.txt  setup.py  split.py  temp
calibration_result/: calibration_no_button.txt
camera/ricoh/: split_image.py
config/: calibration_with_button.txt
cpp/: CMakeLists.txt  pcd_write.cpp
input/: imageAndPcd.txt.sample
lidar/: color_point_cloud.py  split_cloud.py
lidar/fusioneye/: spherical2pcd.py
lidar/hokuyo/: pcl_tools.py
pcd/: cloud.pcd
python-pcl-master/: setup.py
python-pcl-master/examples/: 3dharris.py  sift.py  simple_visualize.py  visualization.py
python-pcl-master/pcl/: pcl_visualization.cpp
python-pcl-master/tests/: test_surface.py
slam/: camera.yml  join.py  slamBase.py
slam/test/: color.py  readyaml.py
test/: generateCube.py  generate_cube.py  icp.py  iterative_closest_point.py  key_points.py  match_image_point_cloud.py  pano_to_cube.py  sift.py
util/: image_util.py
